test-policies-pass/validating/match-resources/tests/match-resources.excluded-by-name.allow.object.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exempt-pod
  namespace: default
spec:
  containers:
  - name: app
    image: nginx
