test-policies-pass/validating/match-resources/tests/match-resources.networkpolicy-create.deny.object.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
