test-policies-pass/validating/match-resources/tests/match-resources.opted-out-by-object-selector.allow.object.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: default
  labels:
    skip-policy: "true"
spec:
  containers:
  - name: app
    image: nginx
