test-policies-pass/validating/match-resources/tests/match-resources.pod-create.deny.object.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: default
spec:
  containers:
  - name: app
    image: nginx
